<resources>
    <string name="app_name">E-Commerce App</string>
    <string name="good_morning">Good Morning 👋</string>
    <string name="dummy_profile_name">Andrew Ainsley</string>
    <string name="we_provide_high_quality_products_just_for_you">We provide high quality products just for you</string>
    <string name="onboarding_viewpager_text_two">Your satisfaction is our number one priority</string>
    <string name="onboarding_viewpager_text_three">Let\'s fulfill your daily needs with Evira right now!</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_meta">Continue with Meta</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_account">Create your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="forget_the_password">Forget the password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_which_contact_details_">Select which contact details should we use to reset your password</string>
    <string name="via_sms">via SMS:</string>
    <string name="_1_111_9">+1 111 *****99</string>
    <string name="and_ley_your_domain_com">and***ley@yourdomain.com</string>
    <string name="via_email">via Email:</string>
    <string name="_continue">Continue</string>
    <string name="code_has_been_send_to_1_111_99">Code has been send to +1 111 ******99</string>
    <string name="resend_code_in_55_s">Resend code in 55 s</string>
    <string name="verify">verify</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_your_new_password">Create Your New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_account_is_ready">Your account is ready to use. You will be redirected to the Home page in a\nfew seconds.</string>
    <string name="the_best_e_commerce_app_">The best e-commerce app of the century for your daily needs!</string>
    <string name="welcome_to">Welcome to 👋</string>
    <string name="evira">Evira</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="notification">Notification</string>
    <string name="special_offers">Special Offers</string>
    <string name="see_all">See All</string>
</resources>