<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.screen.fragment.resetpassword.CreateNewPassFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glNewPassStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glNewPassEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin_top"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toEndOf="@id/glNewPassStart"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/forgot_password_margin_start"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/create_new_password"
            android:textColor="@color/off_black"
            android:textSize="@dimen/forgot_password_tv_size"
            app:layout_constraintBottom_toBottomOf="@id/imgBackPressed"
            app:layout_constraintStart_toEndOf="@id/imgBackPressed"
            app:layout_constraintTop_toTopOf="@id/imgBackPressed" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCreateNewPass"
            android:layout_width="@dimen/views_width"
            android:layout_height="@dimen/views_width"
            android:src="@drawable/ic_create_new_pass"
            app:layout_constraintDimensionRatio="16:10"
            android:layout_marginTop="@dimen/create_new_pass_img_margin_top"
            app:layout_constraintEnd_toEndOf="@id/glNewPassEnd"
            app:layout_constraintStart_toStartOf="@id/glNewPassStart"
            app:layout_constraintTop_toBottomOf="@id/imgBackPressed"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreateYourNewPass"
            android:layout_width="@dimen/views_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/off_black"
            android:textSize="@dimen/select_which_text_size"
            android:layout_marginTop="@dimen/create_your_new_pass_tv_margin_top"
            android:text="@string/create_your_new_password"
            app:layout_constraintTop_toBottomOf="@id/imgCreateNewPass"
            app:layout_constraintEnd_toEndOf="@id/glNewPassEnd"
            app:layout_constraintStart_toEndOf="@id/glNewPassStart"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPassword"
            android:layout_width="@dimen/views_width"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:cursorColor="@color/off_black"
            app:startIconTint="@color/off_black"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_filled_lock"
            android:layout_marginTop="@dimen/tv_pass_margin_top"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@id/glNewPassEnd"
            app:layout_constraintStart_toStartOf="@id/glNewPassStart"
            app:layout_constraintTop_toBottomOf="@id/tvCreateYourNewPass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:letterSpacing="0.01"
                android:textColor="@color/off_black20"
                android:textColorHint="@color/gray100"
                android:fontFamily="@font/poppins"
                android:ellipsize="end"
                android:maxLines="1"
                android:ems="10"
                android:background="@drawable/bg_create_your_account_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvConfirmPassword"
            android:layout_width="@dimen/views_width"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:cursorColor="@color/off_black"
            app:startIconTint="@color/off_black"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_filled_lock"
            android:layout_marginTop="@dimen/tv_password_margin_top"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@id/glNewPassEnd"
            app:layout_constraintStart_toStartOf="@id/glNewPassStart"
            app:layout_constraintTop_toBottomOf="@id/tvPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:letterSpacing="0.01"
                android:textColor="@color/off_black20"
                android:textColorHint="@color/gray100"
                android:fontFamily="@font/poppins"
                android:ellipsize="end"
                android:maxLines="1"
                android:ems="10"
                android:background="@drawable/bg_create_your_account_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--    TODO CHECKBOX DESIGN    -->

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textSize="@dimen/checkbox_text_size"
            android:padding="@dimen/checkbox_padding"
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/off_black"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"
            app:layout_constraintEnd_toEndOf="@id/glNewPassEnd"
            app:layout_constraintStart_toStartOf="@id/glNewPassStart"/>

        <FrameLayout
            android:layout_width="@dimen/views_width"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/glNewPassEnd"
            app:layout_constraintStart_toStartOf="@id/glNewPassStart"
            app:layout_constraintTop_toBottomOf="@id/checkbox">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_next"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.01"
                android:text="@string/_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/onboarding_btn_text_size"
                android:padding="@dimen/onboarding_btn_padding"
                android:layout_marginBottom="@dimen/continue_btn_margin_bottom"
                android:layout_marginTop="@dimen/btn_sign_up_margin_top"
                android:layout_gravity="bottom"/>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>