<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".presenter.screen.fragment.resetpassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glForgotPasswordStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glForgotPasswordEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin_top"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/glForgotPasswordStart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginStart="@dimen/forgot_password_margin_start"
            android:textColor="@color/off_black"
            android:includeFontPadding="false"
            android:textSize="@dimen/forgot_password_tv_size"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toTopOf="@id/imgBackPressed"
            app:layout_constraintBottom_toBottomOf="@id/imgBackPressed"
            app:layout_constraintStart_toEndOf="@id/imgBackPressed"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgForgotPass"
            android:layout_width="@dimen/views_width"
            android:layout_height="@dimen/views_width"
            android:src="@drawable/ic_forgot_password"
            app:layout_constraintDimensionRatio="16:10"
            android:layout_marginTop="@dimen/welcome_image_margin_top"
            app:layout_constraintEnd_toEndOf="@id/glForgotPasswordEnd"
            app:layout_constraintTop_toBottomOf="@+id/imgBackPressed"
            app:layout_constraintStart_toStartOf="@id/glForgotPasswordStart"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectWhich"
            android:layout_width="@dimen/views_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/off_black"
            android:textSize="@dimen/select_which_text_size"
            android:layout_marginTop="@dimen/select_which_margin_top"
            android:text="@string/select_which_contact_details_"
            app:layout_constraintTop_toBottomOf="@id/imgForgotPass"
            app:layout_constraintEnd_toEndOf="@id/glForgotPasswordEnd"
            app:layout_constraintStart_toStartOf="@id/glForgotPasswordStart"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clViaSms"
            android:layout_width="@dimen/views_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/cl_via_padding"
            android:layout_marginTop="@dimen/cl_via_sms_margin_top"
            android:background="@drawable/bg_forgot_pass_sms"
            app:layout_constraintTop_toBottomOf="@id/tvSelectWhich"
            app:layout_constraintEnd_toEndOf="@id/glForgotPasswordEnd"
            app:layout_constraintStart_toStartOf="@id/glForgotPasswordStart">

            <FrameLayout
                android:id="@+id/flForgotPassword"
                android:layout_width="@dimen/vai_with_fl_size"
                android:layout_height="@dimen/vai_with_fl_size"
                android:background="@drawable/bg_via_sms_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/via_with_img_size"
                    android:layout_height="@dimen/via_with_img_size"
                    android:layout_gravity="center"
                    android:src="@drawable/img_sms"
                    android:tint="@color/off_black" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvViaSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="@dimen/via_margin_start"
                android:textSize="@dimen/vai_sms_text_size"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/via_with_margin_bottom_top"
                android:fontFamily="@font/poppins"
                app:layout_constraintBottom_toTopOf="@+id/tvNumber"
                app:layout_constraintStart_toEndOf="@+id/flForgotPassword"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_111_9"
                android:textColor="@color/off_black"
                android:letterSpacing="0.01"
                android:includeFontPadding="false"
                android:layout_marginBottom="@dimen/via_with_margin_bottom_top"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvViaSms"
                app:layout_constraintTop_toBottomOf="@+id/tvViaSms" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clViaEmail"
            android:layout_width="@dimen/views_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/cl_via_padding"
            android:layout_marginTop="@dimen/cl_via_email_margin_top"
            android:background="@drawable/bg_forgot_pass_sms"
            app:layout_constraintTop_toBottomOf="@id/clViaSms"
            app:layout_constraintEnd_toEndOf="@id/glForgotPasswordEnd"
            app:layout_constraintStart_toStartOf="@id/glForgotPasswordStart">

            <FrameLayout
                android:id="@+id/flForgotPassViaEmail"
                android:layout_width="@dimen/vai_with_fl_size"
                android:layout_height="@dimen/vai_with_fl_size"
                android:background="@drawable/bg_via_sms_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/via_with_img_size"
                    android:layout_height="@dimen/via_with_img_size"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_filled_email"
                    android:tint="@color/off_black" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvViaEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="@dimen/via_margin_start"
                android:textSize="@dimen/vai_sms_text_size"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/via_with_margin_bottom_top"
                android:fontFamily="@font/poppins"
                app:layout_constraintBottom_toTopOf="@+id/tvEmail"
                app:layout_constraintStart_toEndOf="@+id/flForgotPassViaEmail"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and_ley_your_domain_com"
                android:textColor="@color/off_black"
                android:letterSpacing="0.01"
                android:includeFontPadding="false"
                android:layout_marginBottom="@dimen/via_with_margin_bottom_top"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvViaEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvViaEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="@dimen/views_width"
            android:layout_height="@dimen/views_width"
            app:layout_constraintTop_toBottomOf="@id/clViaEmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/glForgotPasswordEnd"
            app:layout_constraintStart_toStartOf="@id/glForgotPasswordStart">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_next"
                android:fontFamily="@font/poppins_semibold"
                android:letterSpacing="0.01"
                android:text="@string/_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/onboarding_btn_text_size"
                android:padding="@dimen/onboarding_btn_padding"
                android:layout_marginBottom="@dimen/onboarding_btn_margin_bottom"
                android:layout_marginTop="@dimen/btn_sign_up_margin_top"
                android:layout_gravity="bottom"/>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>